<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#327EB8"
    tools:context=".InformationConverterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="56dp"
        android:layout_marginTop="21dp"
        android:text="@string/second_activity_header"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_edText"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="138dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_editText_number"
        android:inputType="textPersonName"
        android:textColorHint="#979797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/result_edText"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="21dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_editText_result"
        android:inputType="textPersonName"
        android:textColorHint="#979797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_edText">

        <EditText
            android:id="@+id/byte_edText"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/hint_editText_byte"
            android:inputType="textPassword"
            android:textColorHint="#979797"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/kilobyte_edText"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/hint_editText_kilobyte"
            android:inputType="textPersonName"
            android:textColorHint="#979797"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Из"
            app:layout_constraintBottom_toTopOf="@+id/byte_edText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="8dp"
            android:text="В"
            app:layout_constraintBottom_toTopOf="@+id/kilobyte_edText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/button_text_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>